--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -9,12 +9,20 @@ body{
 .btn-primary{
     border-radius: 5px;
     background: #FD6E0A;
+    border: 0;
+    font-weight: 700;
+    font-size: 20;
+    color: white;
+    padding: 15px 35px;
 
 }
 
 /* nav related styles */
 nav{
     display: flex;
+    justify-content: space-between;
+    align-items: center;
+
 }
 .nav-title{
     color: var #181818;
@@ -24,6 +32,7 @@ nav{
 }
 nav > ul{
     display: flex;
+    align-items: center;
 }
 nav li {
     list-style: none;
