--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -5,6 +5,8 @@ body{
 }
 .text-primary{
     color: #FD6E0A;
+    font-size: 45px;
+    font-weight: 800;
 }
 .btn-primary{
     border-radius: 5px;
@@ -115,6 +117,10 @@ main{
    margin: 0 auto;
 }
 
+main section{
+    margin-top: 130px;
+}
+
 /* about section styles */
 
 .about{
@@ -132,3 +138,36 @@ main{
 .about-info{
     text-align: center;
 }
+
+/* skills related styles */
+
+#what-i-do-description{
+    padding: 30px 150px;
+}
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skills{
+    padding: 30px;
+    border-radius: 5px;
+    background: #FFF;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+    
+
+}
+
+.skills-description{
+    /* padding: 30px; */
+    color:#757575;
+}
+
+/* Resume Section Styles */
+
+.resume-colum-title{
+    color: #474747;
+    font-size: 30px;
+    font-weight: 700;
+}
+
