--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -171,3 +171,35 @@ main section{
     font-weight: 700;
 }
 
+.resume-container{
+    display: flex;
+    gap: 70px;
+}
+.resume-item-title{
+    color:#474747;
+    font-size: 25px;
+    font-weight: 700;
+    margin-bottom: 10px;
+
+}
+
+.resume-item-ins{
+    margin-bottom: 20px;
+    margin-top: 0px;
+}
+.resume-item-description,
+.resume-item-ins{
+    color:#757575;
+}
+
+.resume-container hr{
+    margin: 30px ;
+    width: 500px;
+    height: 1px;
+    background: #D1D1D1;
+}
+.download-cv{
+    text-align: center;
+    margin-top: 50px;
+
+}
